# hx_design_engine

./: .env.example  .gitignore  AI_ENGINEER_DESIGN_PLAN.md  AI_ENGINEER_GAPS.md  ARKEN_MASTER_PLAN.md  ARKEN_STEPS_1_5_PLAN.md  Dockerfile  HX_SMOKE_TEST_REPORT.md  IMPLEMENTATION_ARCHITECTURE.md  INSTALLATION.md  INTEGRATION_PLAN_V1.md  README.md  REQUIREMENTS_REFACTOR_PLAN.md  REVIEW_STEPS_1_5.md  STEP1_5_PLAN_VS_IMPLEMENTATION.md  STEPS_6_16_PLAN.md  STEP_6_IMPLEMENTATION_PLAN.md  Step8ImplPlan.md  TODOS.md  devAstep2.md  devAstep3.md  devAstep4.md  devAstep4_AI_FOULING.md  devAstep5.md  pyproject.toml  requirements.txt  step7Impl.md  test_10_designs.py
docs/: SUPERMEMORY_IMPLEMENTATION_PLAN.md  Step10ImplPlan.md  Step11ImplPlan.md  Step12ImplPlan.md  Step13ImplPlan.md  Step14ImplPlan.md  Step15ImplPlan.md  Step16ImplPlan.md  Step9ImplPlan.md  externalKnowledgeReq.md
hx_design_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hx_engine/app/: config.py  dependencies.py  main.py
tests/: conftest.py  test_http_endpoints.py
tests/fixtures/: bd_ref_001.json  bd_ref_calculator.py
tests/integration/: test_e2e_pipeline_glycerol_cooler.py  test_intake_constraints.py  test_pipeline_multi_shell.py  test_pipeline_step09_diameter_guard.py  test_pipeline_step10_nozzle_enforcement.py  test_pipeline_steps_1_5.py  test_step_11_integration.py  test_step_12_integration.py  test_step_13_integration.py  test_step_14_integration.py  test_step_14_regression.py  test_step_15_integration.py  test_step_15_regression.py  test_step_16_integration.py  test_step_16_regression.py
tests/unit/: conftest.py  test_ai_engineer.py  test_asme_external_pressure.py  test_asme_external_pressure_validation.py  test_asme_thickness.py  test_base_step.py  test_base_step_convergence_flag.py  test_bell_delaware_dP.py  test_bell_delaware_vs_ref.py  test_bwg_gauge.py  test_churchill_friction.py  test_cost_indices.py  test_design_intent.py  test_design_state.py  test_escalation_restart.py  test_exceptions.py  test_fouling_factors.py  test_layer2_recovery.py  test_lmtd_correlation.py  test_material_properties.py  test_material_properties_step14.py  test_nozzle_table.py  (+82 more)
(+92 files in other folders)
