[project]
name = "hx-design-engine"
version = "0.1.0"
description = "Heat Exchanger Design Engine — TEMA-compliant shell-and-tube HX design pipeline"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "anthropic>=0.40",
    "motor>=3.3",
    "pymongo>=4.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
thermo = [
    "iapws>=3.0",
    "CoolProp>=6.4",
    "thermo>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "iapws>=3.0",
    "CoolProp>=6.4",
    "thermo>=0.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
